Improved solution:  - added server.servlet.context-path=/api to application.properties;  - substituted annotations in DTOs classes to @Data;  - BookServiceImpl class:    - substituted constructor to @RequiredArgsConstructor annotation;    - removed unnecessary null check;    - substituted '.collect(Collectors.toList())' to '.toList();' in getAll() method;    - renamed variable from 'saved' to 'book' in save() method.