@@ -1,7 +1,7 @@
 package onlinebookstore.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import onlinebookstore.dto.BookDto;
 import onlinebookstore.dto.CreateBookRequestDto;
 import onlinebookstore.exception.EntityNotFoundException;
@@ -9,41 +9,29 @@ import onlinebookstore.mapper.BookMapper;
 import onlinebookstore.model.Book;
 import onlinebookstore.repository.BookRepository;
 import onlinebookstore.service.BookService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+@RequiredArgsConstructor
 @Service
 public class BookServiceImpl implements BookService {
     private final BookRepository bookRepository;
     private final BookMapper bookMapper;
 
-    @Autowired
-    public BookServiceImpl(BookRepository bookRepository, BookMapper bookMapper) {
-        this.bookRepository = bookRepository;
-        this.bookMapper = bookMapper;
-    }
-
     @Override
     public BookDto save(CreateBookRequestDto bookRequestDto) {
-        if (bookRequestDto == null) {
-            throw new RuntimeException("bookRequestDto can't be null");
-        }
-        Book saved = bookRepository.save(bookMapper.toModel(bookRequestDto));
-        return bookMapper.toDto(saved);
+        Book book = bookRepository.save(bookMapper.toModel(bookRequestDto));
+        return bookMapper.toDto(book);
     }
 
     @Override
     public List<BookDto> findAll() {
         return bookRepository.findAll().stream()
                 .map(bookMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public BookDto findById(Long id) {
-        if (id == null) {
-            throw new RuntimeException("id can't be null");
-        }
         Book book = bookRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Book not found with id: " + id));
         return bookMapper.toDto(book);
